# CustomarioAI

./: .gitignore  AGENTS_REFACTORED.md  AGENT_ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  INSTALL_FIRST.md  INTEGRATION_SUMMARY.txt  NO_BACKEND_VOICE.txt  PAYMENT_INTEGRATION.md  POETRY_SETUP.md  QUICKSTART.md  README.md  REFACTOR_COMPLETE.md  SETUP.md  SIMPLIFIED_FLOW.md  START_HERE.txt  VAD_CONFIGURATION.md  VOICE_AGENT_FIXED.txt  VOICE_AGENT_SDK.md  VOICE_FLOW.md  VOICE_INTEGRATION_COMPLETE.txt  VOICE_SETUP.txt  WIDGET_INTEGRATION.md  env.example  example_survey.json  example_usage.py  pyproject.toml  requirements.txt  run.py  test.py  test_agents.py  test_integration.py  test_voice_console.py  test_widget_flow.py
app/: __init__.py  main.py  models.py  orchestrator.py  payment.py  storage.py
app/agents/: anthropic_client.py  evaluation_agent.py  insights_agent.py  targeting_agent.py  voice_agent.py
backend/: PAYMENT_SETUP.md  requirements.txt
backend/app/: __init__.py  main.py  payment_service.py
customario/: .env  VAPI_SETUP.md  index.html  package-lock.json  package.json  server.py
customario/src/: App.css  App.tsx  index.css
customario/src/components/: FeedbackBorder.css  FeedbackBorder.tsx  FeedbackFAB.css  FeedbackFAB.tsx  FeedbackPanel.css  FeedbackPanel.tsx  FeedbackResults.css  FeedbackResults.tsx  FeedbackWidget.css  FeedbackWidget.tsx  MockWebsite.css  MockWebsite.tsx
customario/src/pages/: AdminPage.tsx  FeedbackResults.tsx  InsightsPage.css  InsightsPage.tsx  UserExperience.tsx
customario/src/services/: apiService.ts  paymentService.ts  (+2 more)
